@@ -1,3 +1,8 @@
+2014-01-19 Riccardo Mottola <rm@gnu.org>
+
+	* GRBezierPath.m (remakePath)
+	Detect line segments and rebuild path accordingly.
+
 2014-01-17 Riccardo Mottola <rm@gnu.org>
 
 	* GRBezierControlPoint.m
